# FTDataGenerationForJaseci

./: .gitignore  README.md  check.sh  context.md  process.md  pyproject.toml  run_dpo.sh  run_probe.sh  setup_env.sh
dashboard_app/: README.md  global.css  main.jac
dashboard_app/components/: AppShell.cl.jac  DatasetPage.cl.jac  HistoryPage.cl.jac  IngestPage.cl.jac  MonitorPage.cl.jac  RunCharts.cl.jac  TrainPage.cl.jac
dashboard_app/services/: dataset.sv.jac  jobs.sv.jac
dataset/context/: jac-context-v1.md
dataset/review/: jac-synth-v0.1.0-manual-review-sample.json
docs/: context.md  dataset.md  dataset_foundation.md  index.md  operations.md  quality.md  scale_runbook.md  task1.md  task2.md  task3.md  task4.md  task5.md  task6.md
docs/datagenstrat/: strat.md  workflow.md
docs/documentation/: 00-rl-phase.md  01-sft-dpo-phase.md
docs/initmodelchoice/: strat.md
docs/modeltesting/: HANDOFF.md  conversion_probe.md  deepseek-v3-lite.md  evaluation.md  mini_probe.md  qwen3-coder-30b.md  strategy.md  workflow.md
docs/newdatagenstrat/: README.md  strat.md  workflow.md
docs/rl/: runlog.md  strat.md  workflow.md
docs/tasks/: README.md  task2.md  (+4 more)
jac_ml_studio/: README.md  start.sh  update.sh
rl/: README.md  eval_rl.jac  reward_logic.jac  run_grpo.sh
tests/: test_artifacts.py  test_context_bundle.py  test_foundation.py  test_jac_compiler.py  test_manual_review.py  test_openai_generation.py  test_prompt_design.py  test_release.py  test_single_turn_generation.py  test_trajectory_generation.py  test_validation.py
web_app/: README.md  smoke.sh  start.sh
(+329 files in other folders)
