[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jac-data-generation"
version = "0.1.0"
description = "Synthetic Jac data generation planning and prompt utilities"
requires-python = ">=3.11"
dependencies = [
    "jaclang",
    "openai",
    "pydantic",
    "python-dotenv",
]

[tool.pytest.ini_options]
pythonpath = ["srccurrent"]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["srccurrent"]
